hphp/test/slow/traits/2080.php.expectf
HipHop Fatal error: cannot use 'static' as access modifier in %s/hphp/test/slow/traits/2080.php on line 3
